Fix Bug 22161: Assertion failure in RenderThemeWin::systemColor when loading microsoftpdc.com

WebCore:

        Fix Bug 22161: Assertion failure in RenderThemeWin::systemColor when
        loading microsoftpdc.com

        <https://bugs.webkit.org/show_bug.cgi?id=22161>

        Reviewed by Dan Bernstein.

        Test: fast/css/outline-invert-assertion.html

        * rendering/RenderThemeWin.cpp:
        (WebCore::RenderThemeWin::systemColor): If we can't determine a good
        Win32 system color to use, defer to RenderTheme instead of asserting.
        This matches what RenderThemeMac does.

LayoutTests:

        Test for Bug 22161: Assertion failure in RenderThemeWin::systemColor
        when loading microsoftpdc.com

        <https://bugs.webkit.org/show_bug.cgi?id=22161>

        Note that this test would only fail if DumpRenderTree used
        RenderThemeWin, which it doesn't. I did test that locally, though.

        Reviewed by Dan Bernstein.

        * fast/css/outline-invert-assertion-expected.txt: Added.
        * fast/css/outline-invert-assertion.html: Added.

Canonical link: https://commits.webkit.org/30492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38274 268f45cc-cd09-0410-ab3c-d52691b4dbfc